         or something like that. guys, send me a patch.
WISH: coloured pastebin
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: decrqm http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
TODO: perl-shell-window? perl-unix-socket?
TODO: command line editing when icanon?

	- don't swap perl env with real env, save and restore it, just in case
          we ever get recursive perl invocations. also saves a bit of codespace
          with gcc.
        - fix various memory leaks (Emanuele Giaquinta).
        - fix debian bug #504817, to the extent possible.

9.10 Mon Dec 13 17:43:52 CET 2010
	- the "schmorp=north korea dickey=south korea" release.
        - INCOMPATIBLE CHANGE: make OSC 20 simpler and more correct
          (Emanuele Giaquinta).
	- if options were compiled out, this could lead to the option
          count to be defined wrongly. This is likely behind the
          failures with gcc 4.5.
        - explicitly depend on fontconfig and xrender when xft support
          is enabled. Although the public Xft api uses types from
          both, in Xft 2.2.0 these libs are private
          dependencies only thanks to an idiotic behaviour of
          pkg-config that was added to workaround cases like this one.
          Fixes linking when using GNU ld with --as-needed or GNU gold
          (based on patch by Jan Palus).
        - fix minor memory leaks in urxvt and urxvtd.
        - fix regression in urxvtd that prevented options from being correctly
          set (reported by Michal Vaner).
	- implement xterm's horribly broken 1005 mouse reporting mode,
          and an alternative 1015 mode that works in non-utf-8 locales
          and has fewer limitations.
	- fix a possible bug where mouse notifications didn't work after
          startup for the upper left corner.
        - implement our own pixbuf to pixmap rendering to get rid of